Parser.output
   0  $accept : %entry% $end

   1  Prog : TyDecs FunDecs Exp EOF

   2  TyDecs : TYPE ID EQUALS LPAR Types RPAR TyDecs
   3         |

   4  FunDecs : FUN ID COLON Type ARROW Type Match END FunDecs
   5          |

   6  Type : INT
   7       | BOOL
   8       | ID

   9  Types : Type
  10        | Type COMMA Types

  11  Pat : NUM
  12      | ID
  13      | FALSE
  14      | TRUE

  15  Pats : Pat
  16       | Pat COMMA Pats

  17  Match : Pat MATCHARROW Exp
  18        | Match BAR Match

  19  Exp : NUM
  20      | TRUE
  21      | FALSE
  22      | ID
  23      | Exp PLUS Exp
  24      | Exp MINUS Exp
  25      | ID Exp
  26      | READ
  27      | WRITE Exp
  28      | LPAR Exp RPAR

  29  Exps : Exp
  30       | Exp SEMICOLON Exps

  31  %entry% : '\001' Prog

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . Prog  (31)
	TyDecs : .  (3)

	TYPE  shift 3
	FALSE  reduce 3
	FUN  reduce 3
	ID  reduce 3
	LPAR  reduce 3
	NUM  reduce 3
	READ  reduce 3
	TRUE  reduce 3
	WRITE  reduce 3

	Prog  goto 4
	TyDecs  goto 5


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	TyDecs : TYPE . ID EQUALS LPAR Types RPAR TyDecs  (2)

	ID  shift 6
	.  error


state 4
	%entry% : '\001' Prog .  (31)

	.  reduce 31


state 5
	Prog : TyDecs . FunDecs Exp EOF  (1)
	FunDecs : .  (5)

	FUN  shift 7
	FALSE  reduce 5
	ID  reduce 5
	LPAR  reduce 5
	NUM  reduce 5
	READ  reduce 5
	TRUE  reduce 5
	WRITE  reduce 5

	FunDecs  goto 8


state 6
	TyDecs : TYPE ID . EQUALS LPAR Types RPAR TyDecs  (2)

	EQUALS  shift 9
	.  error


state 7
	FunDecs : FUN . ID COLON Type ARROW Type Match END FunDecs  (4)

	ID  shift 10
	.  error


state 8
	Prog : TyDecs FunDecs . Exp EOF  (1)

	FALSE  shift 11
	ID  shift 12
	LPAR  shift 13
	NUM  shift 14
	READ  shift 15
	TRUE  shift 16
	WRITE  shift 17
	.  error

	Exp  goto 18


state 9
	TyDecs : TYPE ID EQUALS . LPAR Types RPAR TyDecs  (2)

	LPAR  shift 19
	.  error


state 10
	FunDecs : FUN ID . COLON Type ARROW Type Match END FunDecs  (4)

	COLON  shift 20
	.  error


state 11
	Exp : FALSE .  (21)

	.  reduce 21


state 12
	Exp : ID .  (22)
	Exp : ID . Exp  (25)

	FALSE  shift 11
	ID  shift 12
	LPAR  shift 13
	NUM  shift 14
	READ  shift 15
	TRUE  shift 16
	WRITE  shift 17
	BAR  reduce 22
	END  reduce 22
	EOF  reduce 22
	MINUS  reduce 22
	PLUS  reduce 22
	RPAR  reduce 22

	Exp  goto 21


state 13
	Exp : LPAR . Exp RPAR  (28)

	FALSE  shift 11
	ID  shift 12
	LPAR  shift 13
	NUM  shift 14
	READ  shift 15
	TRUE  shift 16
	WRITE  shift 17
	.  error

	Exp  goto 22


state 14
	Exp : NUM .  (19)

	.  reduce 19


state 15
	Exp : READ .  (26)

	.  reduce 26


state 16
	Exp : TRUE .  (20)

	.  reduce 20


state 17
	Exp : WRITE . Exp  (27)

	FALSE  shift 11
	ID  shift 12
	LPAR  shift 13
	NUM  shift 14
	READ  shift 15
	TRUE  shift 16
	WRITE  shift 17
	.  error

	Exp  goto 23


state 18
	Prog : TyDecs FunDecs Exp . EOF  (1)
	Exp : Exp . PLUS Exp  (23)
	Exp : Exp . MINUS Exp  (24)

	EOF  shift 24
	MINUS  shift 25
	PLUS  shift 26
	.  error


state 19
	TyDecs : TYPE ID EQUALS LPAR . Types RPAR TyDecs  (2)

	BOOL  shift 27
	ID  shift 28
	INT  shift 29
	.  error

	Type  goto 30
	Types  goto 31


state 20
	FunDecs : FUN ID COLON . Type ARROW Type Match END FunDecs  (4)

	BOOL  shift 27
	ID  shift 28
	INT  shift 29
	.  error

	Type  goto 32


state 21
	Exp : Exp . PLUS Exp  (23)
	Exp : Exp . MINUS Exp  (24)
	Exp : ID Exp .  (25)

	BAR  reduce 25
	END  reduce 25
	EOF  reduce 25
	MINUS  reduce 25
	PLUS  reduce 25
	RPAR  reduce 25


state 22
	Exp : Exp . PLUS Exp  (23)
	Exp : Exp . MINUS Exp  (24)
	Exp : LPAR Exp . RPAR  (28)

	MINUS  shift 25
	PLUS  shift 26
	RPAR  shift 33
	.  error


state 23
	Exp : Exp . PLUS Exp  (23)
	Exp : Exp . MINUS Exp  (24)
	Exp : WRITE Exp .  (27)

	BAR  reduce 27
	END  reduce 27
	EOF  reduce 27
	MINUS  reduce 27
	PLUS  reduce 27
	RPAR  reduce 27


state 24
	Prog : TyDecs FunDecs Exp EOF .  (1)

	.  reduce 1


state 25
	Exp : Exp MINUS . Exp  (24)

	FALSE  shift 11
	ID  shift 12
	LPAR  shift 13
	NUM  shift 14
	READ  shift 15
	TRUE  shift 16
	WRITE  shift 17
	.  error

	Exp  goto 34


state 26
	Exp : Exp PLUS . Exp  (23)

	FALSE  shift 11
	ID  shift 12
	LPAR  shift 13
	NUM  shift 14
	READ  shift 15
	TRUE  shift 16
	WRITE  shift 17
	.  error

	Exp  goto 35


state 27
	Type : BOOL .  (7)

	.  reduce 7


state 28
	Type : ID .  (8)

	.  reduce 8


state 29
	Type : INT .  (6)

	.  reduce 6


state 30
	Types : Type .  (9)
	Types : Type . COMMA Types  (10)

	COMMA  shift 36
	RPAR  reduce 9


state 31
	TyDecs : TYPE ID EQUALS LPAR Types . RPAR TyDecs  (2)

	RPAR  shift 37
	.  error


state 32
	FunDecs : FUN ID COLON Type . ARROW Type Match END FunDecs  (4)

	ARROW  shift 38
	.  error


state 33
	Exp : LPAR Exp RPAR .  (28)

	.  reduce 28


state 34
	Exp : Exp . PLUS Exp  (23)
	Exp : Exp . MINUS Exp  (24)
	Exp : Exp MINUS Exp .  (24)

	BAR  reduce 24
	END  reduce 24
	EOF  reduce 24
	MINUS  reduce 24
	PLUS  reduce 24
	RPAR  reduce 24


state 35
	Exp : Exp . PLUS Exp  (23)
	Exp : Exp PLUS Exp .  (23)
	Exp : Exp . MINUS Exp  (24)

	BAR  reduce 23
	END  reduce 23
	EOF  reduce 23
	MINUS  reduce 23
	PLUS  reduce 23
	RPAR  reduce 23


state 36
	Types : Type COMMA . Types  (10)

	BOOL  shift 27
	ID  shift 28
	INT  shift 29
	.  error

	Type  goto 30
	Types  goto 39


state 37
	TyDecs : TYPE ID EQUALS LPAR Types RPAR . TyDecs  (2)
	TyDecs : .  (3)

	TYPE  shift 3
	FALSE  reduce 3
	FUN  reduce 3
	ID  reduce 3
	LPAR  reduce 3
	NUM  reduce 3
	READ  reduce 3
	TRUE  reduce 3
	WRITE  reduce 3

	TyDecs  goto 40


state 38
	FunDecs : FUN ID COLON Type ARROW . Type Match END FunDecs  (4)

	BOOL  shift 27
	ID  shift 28
	INT  shift 29
	.  error

	Type  goto 41


state 39
	Types : Type COMMA Types .  (10)

	.  reduce 10


state 40
	TyDecs : TYPE ID EQUALS LPAR Types RPAR TyDecs .  (2)

	.  reduce 2


state 41
	FunDecs : FUN ID COLON Type ARROW Type . Match END FunDecs  (4)

	FALSE  shift 42
	ID  shift 43
	NUM  shift 44
	TRUE  shift 45
	.  error

	Match  goto 46
	Pat  goto 47


state 42
	Pat : FALSE .  (13)

	.  reduce 13


state 43
	Pat : ID .  (12)

	.  reduce 12


state 44
	Pat : NUM .  (11)

	.  reduce 11


state 45
	Pat : TRUE .  (14)

	.  reduce 14


state 46
	FunDecs : FUN ID COLON Type ARROW Type Match . END FunDecs  (4)
	Match : Match . BAR Match  (18)

	BAR  shift 48
	END  shift 49
	.  error


state 47
	Match : Pat . MATCHARROW Exp  (17)

	MATCHARROW  shift 50
	.  error


state 48
	Match : Match BAR . Match  (18)

	FALSE  shift 42
	ID  shift 43
	NUM  shift 44
	TRUE  shift 45
	.  error

	Match  goto 51
	Pat  goto 47


state 49
	FunDecs : FUN ID COLON Type ARROW Type Match END . FunDecs  (4)
	FunDecs : .  (5)

	FUN  shift 7
	FALSE  reduce 5
	ID  reduce 5
	LPAR  reduce 5
	NUM  reduce 5
	READ  reduce 5
	TRUE  reduce 5
	WRITE  reduce 5

	FunDecs  goto 52


state 50
	Match : Pat MATCHARROW . Exp  (17)

	FALSE  shift 11
	ID  shift 12
	LPAR  shift 13
	NUM  shift 14
	READ  shift 15
	TRUE  shift 16
	WRITE  shift 17
	.  error

	Exp  goto 53


state 51
	Match : Match . BAR Match  (18)
	Match : Match BAR Match .  (18)

	BAR  shift 48
	END  reduce 18


state 52
	FunDecs : FUN ID COLON Type ARROW Type Match END FunDecs .  (4)

	.  reduce 4


state 53
	Match : Pat MATCHARROW Exp .  (17)
	Exp : Exp . PLUS Exp  (23)
	Exp : Exp . MINUS Exp  (24)

	MINUS  shift 25
	PLUS  shift 26
	BAR  reduce 17
	END  reduce 17


Rules never reduced:
	Pats : Pat  (15)
	Pats : Pat COMMA Pats  (16)
	Exps : Exp  (29)
	Exps : Exp SEMICOLON Exps  (30)


37 terminals, 12 nonterminals
32 grammar rules, 54 states
